# ha-xiaobiu

./: README.md  conftest.py  install.sh  pyproject.toml
custom_components/suning_biu/: __init__.py  client_lib.py  climate.py  config_flow.py  const.py  coordinator.py  iar_external_view.py  manifest.json  strings.json
custom_components/suning_biu/translations/: en.json  zh-Hans.json
custom_components/xiaobiu/: __init__.py  client_lib.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json  strings.json
custom_components/xiaobiu/translations/: en.json  zh-Hans.json
docs/plans/2026-03-20-ha-iar-regression-rollback-plan/: _index.md  task-001-eager-ticket-impl.md  task-001-eager-ticket-test.md  task-002-single-stage-iar-flow-impl.md  task-002-single-stage-iar-flow-test.md  task-003-resume-error-logging-impl.md  task-003-resume-error-logging-test.md  task-004-post-rollback-ha-verify.md
src/suning_biu_ha/: __init__.py  captcha_bridge.py  client.py  models.py
tasks/: lessons.md  todo.md
tests/: test_captcha_bridge.py  test_client.py  test_home_assistant_component.py
